# AdventOfRust

./: .gitignore  Cargo.toml  LICENSE
2019/src/Calculator/: calculator.rs
2019/src/Day 2/: intcode.rs
2019/src/Day 3/: segment.rs  wires.rs
2019/src/Day 4/: code.rs  main.rs
2019/src/Day 6/: main.rs  planet.rs
2020/: Cargo.toml
2020/src/day-1/: expenses.rs  main.rs
2020/src/day-10/: main.rs
2020/src/day-11/: main.rs
2020/src/day-12/: main.rs
2020/src/day-13/: main.rs
2020/src/day-14/: main.rs
2020/src/day-15/: main.rs
2020/src/day-2/: main.rs
2020/src/day-3/: main.rs
2020/src/day-4/: main.rs  passport.rs
2020/src/day-5/: main.rs
2020/src/day-6/: main.rs
2020/src/day-7/: main.rs
2020/src/day-8/: main.rs
2020/src/day-9/: main.rs
2020/src/utils/: utils.rs
2021/AdventOfCode2021/: AdventOfCode2021.sln  Program.cs
2021/AdventOfCode2021/Days/: Day1.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs
2022/: 2022.csproj  2022.sln  Program.cs
2022/Days/: Day1.cs  Day10.cs  Day11.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs  Day9.cs
2024/: Cargo.toml
2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  main.rs
2024/src/inputs/: day2.demo
src/Day 1/: fuel.rs
src/Day 2/: intcode.rs
src/Day 5/: main.rs
