[package]
name = "AdventOfRust"
version = "0.1.0"
authors = ["Cristi Dima <thecristidima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-1"
path = "src/Day 1/fuel.rs"

[[bin]]
name = "day-2"
path = "src/Day 2/intcode.rs"

[[bin]]
name = "day-3"
path = "src/Day 3/wires.rs"

[dependencies]
