[package]
name = "AdventOfRust"
version = "0.1.0"
authors = ["Cristi Dima <thecristidima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calculator"
path = "src/Calculator/calculator.rs"

[[bin]]
name = "day-1"
path = "src/Day 1/fuel.rs"

[[bin]]
name = "day-2"
path = "src/Day 2/intcode.rs"

[[bin]]
name = "day-3"
path = "src/Day 3/wires.rs"

[[bin]]
name = "day-4"
path = "src/Day 4/main.rs"

[[bin]]
name = "day-5"
path = "src/Day 5/main.rs"

[[bin]]
name = "day-6"
path = "src/Day 6/main.rs"

[dependencies]
