[package]
name = "advent_of_rust_2020"
version = "0.1.0"
authors = ["Cristi Dima <thecristidima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils/utils.rs"

[[bin]]
name = "day-1"
path = "src/day-1/main.rs"

[[bin]]
name = "day-2"
path = "src/day-2/main.rs"

[dependencies]
