[package]
name = "advent_of_rust_2020"
version = "0.1.0"
authors = ["Cristi Dima <thecristidima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils/utils.rs"

[[bin]]
name = "day-1"
path = "src/day-1/main.rs"

[[bin]]
name = "day-2"
path = "src/day-2/main.rs"

[[bin]]
name = "day-3"
path = "src/day-3/main.rs"

[[bin]]
name = "day-4"
path = "src/day-4/main.rs"

[[bin]]
name = "day-5"
path = "src/day-5/main.rs"

[[bin]]
name = "day-6"
path = "src/day-6/main.rs"

[[bin]]
name = "day-7"
path = "src/day-7/main.rs"

[[bin]]
name = "day-8"
path = "src/day-8/main.rs"

[[bin]]
name = "day-9"
path = "src/day-9/main.rs"

[[bin]]
name = "day-10"
path = "src/day-10/main.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
